Fix persistent dark links in playlist on mobile.

--- a/mftb5/static/less/style.less
+++ b/mftb5/static/less/style.less
@@ -81,6 +81,10 @@ a[href] {
   &:hover {
     color: @dark;
   }
+
+  &:active {
+    color: @highlight;
+  }
 }
 
 @import 'playlist.less';
